--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -3,6 +3,14 @@
   text-decoration: underline;
 }
 .ProseMirror {
-  height: 200px;
+  height: 500px;
   padding: 15px 25px;
+  overflow: scroll;
+}
+.editor-scroll ::-webkit-scrollbar {
+  display: none;
+}
+.editor-scroll {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
